--- a/my_site/static/css/mystyle.css
+++ b/my_site/static/css/mystyle.css
@@ -1,8 +1,105 @@
+body{
+    background-color: #ffffff;
+    padding-bottom: 120px;
+}
+
 /* navbar icons */
 span > a > i {
     font-size: 1.5em;
 }
 
+span > a{
+    color: rgb(143, 143, 143);
+}
+
+span > a:hover{
+    color: rgb(107, 107, 107);
+}
+/* end nabar icons */
+
 nav.navbar{
-    background-color: #314a57;
+    background-color: #2e4653;
+}
+
+/* nameplate and photo*/
+
+.nameplate {
+    background-color: #20262b;
+    color: #fff;
+    min-height: 40vh;
+}
+
+.nameplate-content{
+    width: 800px;
+    margin: 0 auto;
+    padding: 3em;
+}
+
+.nameplate-content-me{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    gap: 2em;
+    margin-bottom: 3em;
+    
+}
+
+#pic{
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border-radius: 70%;
+}
+
+.name{
+    font-size: 60px;
+    letter-spacing: .05em;
+    font-weight: 700;
+    line-height: 1em;
+    
+}
+
+.description{
+    font-size: 65px;
+    text-align: center;
+}
+/* end nameplate and photo*/
+
+.MyProjects{
+    background-color: #cccccc;
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.projects--wrapper{
+    display: flex;
+    justify-content: flex-start;
+    gap: 2em;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    overflow-x: auto;
+ 
+}
+
+.project--thumbnail{
+    width: 300px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.project--body{
+    background-color: #fff;
+    padding: 1em;
+}
+
+.project--column{
+    min-width: 300px;
+ 
+}
+
+.aboutme{
+    background-color: #ffffff;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
