--- a/my_site/static/css/mystyle.css
+++ b/my_site/static/css/mystyle.css
@@ -5,17 +5,24 @@ body{
 
 /* navbar icons */
 span > a > i {
-    font-size: 1.5em;
+    font-size: 1.7em;
+    letter-spacing: .5em;
 }
 
 span > a{
     color: rgb(143, 143, 143);
+    padding-top: .1em;
+    padding-bottom: .1em;
+
 }
 
 span > a:hover{
     color: rgb(107, 107, 107);
+    text-decoration: none;
 }
 /* end nabar icons */
+
+
 
 nav.navbar{
     background-color: #2e4653;
@@ -30,9 +37,10 @@ nav.navbar{
 }
 
 .nameplate-content{
+    
     width: 800px;
     margin: 0 auto;
-    padding: 3em;
+    padding: 2em;
 }
 
 .nameplate-content-me{
@@ -42,10 +50,9 @@ nav.navbar{
     color: #fff;
     gap: 2em;
     margin-bottom: 3em;
-    
 }
 
-#pic{
+#profilePic{
     height: 200px;
     width: 200px;
     object-fit: cover;
@@ -57,49 +64,86 @@ nav.navbar{
     letter-spacing: .05em;
     font-weight: 700;
     line-height: 1em;
-    
 }
 
-.description{
+.title{
     font-size: 65px;
     text-align: center;
+}
+
+.resume {
+    font-size: 50px;
+    letter-spacing: .03em;
+    font-weight: 700;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.resume > a{
+    color: rgb(94, 89, 80);
+    padding-top: .1em;
+}
+
+.resume > a:hover{
+    color: rgb(0, 3, 170);
+    text-decoration: none;
 }
 /* end nameplate and photo*/
 
 .MyProjects{
-    background-color: #cccccc;
+    background-color: #d1d1d1;
     padding-top: 2em;
     padding-bottom: 2em;
+    text-align: center;
 }
 
-.projects--wrapper{
+.test{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.projectsWrapper{
     gap: 2em;
     margin-top: 2em;
     margin-bottom: 2em;
     overflow-x: auto;
- 
 }
 
-.project--thumbnail{
-    width: 300px;
-    height: 150px;
+.projectPics{
+    width: 400px;
+    height: 200px;
     object-fit: cover;
 }
 
-.project--body{
+.projectBody{
+    width: 400px;
+    height: 250px;
     background-color: #fff;
     padding: 1em;
 }
 
-.project--column{
-    min-width: 300px;
- 
+.projectTagWrapper{
+    display: flex;
+    flex-wrap: wrap;
+    gap: .3em;
+}
+
+.projectTag{
+    background-color: #c6e8f3;
+    width: fit-content;
+    padding: 3px 20px;
+    border-radius: 20px;
 }
 
 .aboutme{
     background-color: #ffffff;
     padding-top: 2em;
     padding-bottom: 2em;
+    text-align: center;
 }
+
+
