--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -26,8 +26,8 @@
   <div class="test">
     <div class="row">
       <div class="projectsWrapper">
-        <div class="col">
-          <img class="projectPics" src="{% static 'images/screenshot4.png' %}">
+        <div class="col">          
+          <img class="projectPics" src="{% static 'images/Screenshot4.png' %}">
           <div class="projectBody">
               <h5>Image Search Website</h5>
               <p>Abilty to search in several different ways for images that are posted by a user.</p>
@@ -44,7 +44,7 @@
 
       <div class="projectsWrapper">
         <div class="col">
-          <img class="projectPics" src="{% static 'images/reloading.png' %}">
+          <img class="projectPics" src="{% static 'images/Reloading.png' %}">
           <div class="projectBody">
               <h5>Reloading Data Tracker</h5>
               <p>Editable dynamic HTML table that stores data. Uses REST api so there's no refresh required to update the tables.</p>
