changed resume to button

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -7,23 +7,25 @@
   <div class="contact">
       <span><a href="https://www.linkedin.com/in/travis-cottrell-131636212/" target="_blank"><i class="bi bi-linkedin"></i></a></span>
       <span><a href="https://github.com/TravisCottrell" target="_blank"><i class="bi bi-github"></i></a></span>
-  </div><!-- end contact info -->
+  </div>
 </nav>
 
 <div class="nameplate">
   <div class="nameplate-content">
     <div class="nameplate-content-me">
       <img id="profilePic" src="{% static 'images/pfp2.png' %}">
-      <h1 class="name">Jesse<br>Anime</h1>
+      <h1 class="name">Travis<br>Cottrell</h1>
     </div>
     <h3 class="title">FullStack Developer</h3>
-    <p class="resume"><a  href="{% static 'images/Travis_Cottrell.pdf' %}" target="_blank" >Resume</a></p>
+    <div class="resumeWrapper">
+      <a class="resume btn btn-outline-secondary " href="{% static 'images/Travis_Cottrell.pdf' %}" target="_blank">Resume</a>
+    </div>
   </div>
 </div>
 
 <div class="container-fluid MyProjects ">
 <h3>My Projects</h3>
-  <div class="test">
+  <div class="projectSection">
     <div class="row">
       <div class="projectsWrapper">
         <div class="col">          
