added to about me

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -78,12 +78,19 @@
 <div class="container-fluid ">
   <div class="container ">
     <div class="row d-flex justify-content-center">
-      <div class="col-4" >
+      <div class="col-6" >
         <div class=" aboutme">
           <h3>About Me</h3>
           <p>
              I love eveything technology related. I've had a passion for building and tinkering with PCs for about 6 years. 
              I also love embedded systems like CNC machines and 3D printers.
+          </p>
+
+          <p>
+              I have always had an interest in programming but within the last year it has turned into a passion. 
+              Modern web programming makes it very easy to start your projects. You can see your projects start to 
+              come to life in a short amount of time. Deploying your project on a live server and seeing your work on the 
+              internet is very satisfying and gave me a new found passion for programming.
           </p>
 
           <p> My main hobby is the outdoors. I love exploring nature and learning new things. I spend a lot of my spare time hiking, camping, and canoeing.
