--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -29,9 +29,9 @@
     <div class="row">
       <div class="projectsWrapper">
         <div class="col">          
-          <img class="projectPics" src="{% static 'images/Screenshot4.png' %}">
+          <img class="projectPics" src="{% static 'images/imageSearchPics/HomePage.png' %}">
           <div class="projectBody">
-              <h5>Image Search Website</h5>
+              <a href="{% url 'imageSearch' %}"><h5>Image Search Website</h5></a>
               <p>Abilty to search in several different ways for images that are posted by a user.</p>
               <div class="projectTagWrapper">
               <span class="projectTag">XAMPP</span>
@@ -46,9 +46,9 @@
 
       <div class="projectsWrapper">
         <div class="col">
-          <img class="projectPics" src="{% static 'images/Reloading.png' %}">
+          <img class="projectPics" src="{% static 'images/dataTrackerPics/Reloading.png' %}">
           <div class="projectBody">
-              <h5>Reloading Data Tracker</h5>
+              <a href="{% url 'dataTracker' %}"><h5>Reloading Data Tracker</h5></a>
               <p>Editable dynamic HTML table that stores data. Uses REST api so there's no refresh required to update the tables.</p>
               <div class="projectTagWrapper">
                 <span class="projectTag">Django</span>
@@ -82,18 +82,18 @@
         <div class=" aboutme">
           <h3>About Me</h3>
           <p>
-             I love eveything technology related. I've had a passion for building and tinkering with PCs for about 6 years. 
-             I also love embedded systems like CNC machines and 3D printers.
+            I am a former CNC machinist that is currently enrolled at Kent State University for a Bachelors degree in Computer Science. 
+            I love eveything technology related. I've had a passion for building and tinkering with PCs for about 6 years. 
+            I also love CNC machines like lathes, mills, and 3d printers and being able to create things. 
+            My main hobbies since covid sent everyone home has been the outdoors and reading. 
           </p>
 
           <p>
               I have always had an interest in programming but within the last year it has turned into a passion. 
-              Modern web programming makes it very easy to start your projects. You can see your projects start to 
+              Modern web programming makes it very easy to start your projects. You can see your projects 
               come to life in a short amount of time. Deploying your project on a live server and seeing your work on the 
               internet is very satisfying and gave me a new found passion for programming.
           </p>
-
-          <p> My main hobby is the outdoors. I love exploring nature and learning new things. I spend a lot of my spare time hiking, camping, and canoeing.
         </div>
       </div>
       {% comment %} <div class="col">
