--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -13,7 +13,7 @@
 <div class="nameplate">
   <div class="nameplate-content">
     <div class="nameplate-content-me">
-      <img id="profilePic" src="{% static 'images/pfp2.png' %}">
+      <img id="profilePic" src="{% static 'images/self.jpg' %}">
       <h1 class="name">Travis<br>Cottrell</h1>
     </div>
     <h3 class="title">FullStack Developer</h3>
