added pathfinding project/ updated resume

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -58,7 +58,6 @@
                 <span class="projectTag">Bootstrap</span>
               </div>
           </div>
-          
         </div>
       </div>
 
@@ -85,6 +84,21 @@
           </div>
         </div>
       </div> {% endcomment %}
+
+      <div class="projectsWrapper">
+        <div class="col">          
+          <img class="projectPics" src="{% static 'images/Pathfinding.png' %}">
+          <div class="projectBody">
+              <a href="https://traviscottrell.github.io/Pathfinding-App/"><h5>Pathfinding algorithms app</h5></a>
+              <p>implementation and vizualization of several algoithms related to mazes</p>
+              <div class="projectTagWrapper">
+              <span class="projectTag">JavaScript</span>
+                <span class="projectTag">React</span>
+                <span class="projectTag">Css</span>
+              </div>
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
