--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -87,7 +87,7 @@
 
       <div class="projectsWrapper">
         <div class="col">          
-          <img class="projectPics" src="{% static 'images/Pathfinding.png' %}">
+          <img class="projectPics" src="{% static 'images/pathfinding.png' %}">
           <div class="projectBody">
               <a href="https://traviscottrell.github.io/Pathfinding-App/"><h5>Pathfinding algorithms app</h5></a>
               <p>implementation and vizualization of several algoithms related to mazes</p>
