--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -24,9 +24,9 @@
 </div>
 
 <div class="container-fluid MyProjects ">
-<h3>My Projects</h3>
+  <h3>My Projects</h3>
   <div class="projectSection">
-    <div class="row">
+    <div class="row d-flex justify-content-center">
       <div class="projectsWrapper">
         <div class="col">          
           <img class="projectPics" src="{% static 'images/imageSearchPics/HomePage.png' %}">
@@ -87,7 +87,7 @@
 
       <div class="projectsWrapper">
         <div class="col">          
-          <img class="projectPics" src="{% static 'images/Pathfinding.png' %}">
+          <img class="projectPics" src="{% static 'images/pathfinding.png' %}">
           <div class="projectBody">
               <a href="https://traviscottrell.github.io/Pathfinding-App/"><h5>Pathfinding algorithms app</h5></a>
               <p>implementation and vizualization of several algoithms related to mazes</p>
