--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -89,7 +89,7 @@
         <div class="col">          
           <img class="projectPics" src="{% static 'images/pathfinding.png' %}">
           <div class="projectBody">
-              <a href="https://traviscottrell.github.io/Pathfinding-App/"><h5>Pathfinding algorithms app</h5></a>
+              <a href="https://traviscottrell.github.io/Function-Pathfinding-App/"><h5>Pathfinding algorithms app</h5></a>
               <p>implementation and vizualization of several algoithms related to mazes</p>
               <div class="projectTagWrapper">
               <span class="projectTag">JavaScript</span>
