--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,132 +1,91 @@
-{% extends "base/base.html" %} 
-{%block title%}Home{%endblock title%} 
-{% load static %} 
-{%block content%}
+{% extends "base/base.html" %}
+{%block title%}Home{%endblock title%}
+{% load static %}
 
-<nav class="navbar">
-    <div class="contact">
-        <span
-            ><a
-                href="https://www.linkedin.com/in/travis-cottrell-131636212/"
-                target="_blank"
-                ><i class="bi bi-linkedin"></i></a
-        ></span>
-        <span
-            ><a href="https://github.com/TravisCottrell" target="_blank"
-                ><i class="bi bi-github"></i></a
-        ></span>
-    </div>
+{%block content%}
+<nav class="navbar ">
+  <div class="contact">
+      <span><a href="https://www.linkedin.com/in/travis-cottrell-131636212/" target="_blank"><i class="bi bi-linkedin"></i></a></span>
+      <span><a href="https://github.com/TravisCottrell" target="_blank"><i class="bi bi-github"></i></a></span>
+  </div>
 </nav>
 
 <div class="nameplate">
-    <div class="nameplate-content">
-        <div class="nameplate-content-me">
-            <h1 class="name">Travis<br />Cottrell</h1>
-        </div>
-        <h3 class="title">FullStack Developer</h3>
-        <div class="resumeWrapper">
-            <a
-                class="resume btn btn-outline-secondary"
-                href="{% static 'images/Travis_Cottrell.pdf' %}"
-                target="_blank"
-                >Resume</a
-            >
-        </div>
+  <div class="nameplate-content">
+    <div class="nameplate-content-me">
+      <!-- <img id="profilePic" src="{% static 'images/self.jpg' %}"> -->
+      <h1 class="name">Travis<br>Cottrell</h1>
     </div>
+    <h3 class="title">FullStack Developer</h3>
+    <div class="resumeWrapper">
+      <a class="resume btn btn-outline-secondary " href="{% static 'images/Travis_Cottrell.pdf' %}" target="_blank">Resume</a>
+    </div>
+  </div>
 </div>
 
-<div class="container-fluid MyProjects">
-    <h3>My Projects</h3>
-    <div class="projectSection">
-        <div class="row d-flex justify-content-center">
-            <div class="projectsWrapper">
-                <div class="col">
-                    <img
-                        class="projectPics"
-                        src="{% static 'images/imageSearchPics/HomePage.png' %}"
-                    />
-                    <div class="projectBody">
-                        <a href="{% url 'imageSearch' %}"
-                            ><h5>Image Search Website</h5></a
-                        >
-                        <p>
-                            Abilty to search in several different ways for
-                            images that are posted by a user.
-                        </p>
-                        <div class="projectTagWrapper">
-                            <span class="projectTag">XAMPP</span>
-                            <span class="projectTag">PHP</span>
-                            <span class="projectTag">JavaScript</span>
-                            <span class="projectTag">MySQL</span>
-                            <span class="projectTag">Bootstrap</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="container-fluid MyProjects ">
+  <h3>My Projects</h3>
+  <div class="projectSection">
+    <div class="row d-flex justify-content-center">
+      <div class="projectsWrapper">
+        <div class="col">          
+          <img class="projectPics" src="{% static 'images/imageSearchPics/HomePage.png' %}">
+          <div class="projectBody">
+              <a href="{% url 'imageSearch' %}"><h5>Image Search Website</h5></a>
+              <p>Abilty to search in several different ways for images that are posted by a user.</p>
+              <div class="projectTagWrapper">
+              <span class="projectTag">XAMPP</span>
+                <span class="projectTag">PHP</span>
+                <span class="projectTag">JavaScript</span>
+                <span class="projectTag">MySQL</span>
+                <span class="projectTag">Bootstrap</span>
+              </div>
+          </div>
+        </div>
+      </div>
 
-            <div class="projectsWrapper">
-                <div class="col">
-                    <img
-                        class="projectPics"
-                        src="{% static 'images/dataTrackerPics/Reloading.png' %}"
-                    />
-                    <div class="projectBody">
-                        <a href="{% url 'dataTracker' %}"
-                            ><h5>Reloading Data Tracker</h5></a
-                        >
-                        <p>
-                            Editable dynamic HTML table that stores data. Uses
-                            REST api so there's no refresh required to update
-                            the tables.
-                        </p>
-                        <div class="projectTagWrapper">
-                            <span class="projectTag">Django</span>
-                            <span class="projectTag">Python</span>
-                            <span class="projectTag">JavaScript</span>
-                            <span class="projectTag">REST</span>
-                            <span class="projectTag">Bootstrap</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="projectsWrapper">
+        <div class="col">
+          <img class="projectPics" src="{% static 'images/dataTrackerPics/Reloading.png' %}">
+          <div class="projectBody">
+              <a href="{% url 'dataTracker' %}"><h5>Reloading Data Tracker</h5></a>
+              <p>Editable dynamic HTML table that stores data. Uses REST api so there's no refresh required to update the tables.</p>
+              <div class="projectTagWrapper">
+                <span class="projectTag">Django</span>
+                <span class="projectTag">Python</span>
+                <span class="projectTag">JavaScript</span>
+                <span class="projectTag">REST</span>
+                <span class="projectTag">Bootstrap</span>
+              </div>
+          </div>
+        </div>
+      </div>
 
-            <div class="projectsWrapper">
-                <div class="col">
-                    <img
-                        class="projectPics"
-                        src="{% static 'images/ai_car_pics/gen7.png' %}"
-                    />
-                    <div class="projectBody">
-                        <a href="{% url 'AI_Car' %}"><h5>AI Cars</h5></a>
-                        <p>
-                            Cars learning to drive around a semicircular track
-                            from generation to generation
-                        </p>
-                        <div class="projectTagWrapper">
-                            <span class="projectTag">Python</span>
-                            <span class="projectTag">Genetic</span>
-                            <span class="projectTag">Neural Network</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="projectsWrapper">
+        <div class="col">          
+          <img class="projectPics" src="{% static 'images/ai_car_pics/gen7.png' %}">
+          <div class="projectBody">
+              <a href="{% url 'AI_Car' %}"><h5>AI Cars</h5></a>
+              <p>Cars learning to drive around a semicircular track from generation to generation</p>
+              <div class="projectTagWrapper">
+              <span class="projectTag">Python</span>
+                <span class="projectTag">Genetic</span>
+                <span class="projectTag">Neural Network</span>
+              </div>
+          </div>
+        </div>
+      </div>
 
-            {% comment %}
-            <div class="projects--wrapper">
-                <div class="col">
-                    <img
-                        class="project--thumbnail"
-                        src="{% static 'images/screenshot3.png' %}"
-                    />
-                    <div class="project--body">
-                        <h5>third project</h5>
-                    </div>
-                </div>
-            </div>
-            {% endcomment %}
+      {% comment %} <div class="projects--wrapper">
+        <div class="col">
+          <img class="project--thumbnail" src="{% static 'images/screenshot3.png' %}">
+          <div class="project--body">
+              <h5>third project</h5>
+          </div>
+        </div>
+      </div> {% endcomment %}
 
-
-            <div class="projectsWrapper">
+      <div class="projectsWrapper">
         <div class="col">          
           <img class="projectPics" src="{% static 'images/pathfinding.png' %}">
           <div class="projectBody">
@@ -138,67 +97,61 @@
                 <span class="projectTag">Css</span>
               </div>
           </div>
-
         </div>
+      </div>
+
     </div>
+  </div>
 </div>
 
-<div class="container-fluid OtherProjects">
-    <h3>Other Projects</h3>
-    <div class="container">
-        <div class="row">
-            <ul>
-                <a href="{% url 'HMM' %}"><li>Hidden Markov Model</li></a>
-                <a href="{% url 'Kmeans' %}"><li>K-means Algorithm</li></a>
-                <a href="{% url 'LinReg' %}"><li>Linear Regression</li></a>
-            </ul>
-        </div>
+<div class="container-fluid OtherProjects ">
+  <h3>Other Projects</h3>
+  <div class="container">
+    <div class="row" >
+      <ul>
+        <a href="{% url 'HMM' %}"><li>Hidden Markov Model</li></a>
+        <a href="{% url 'Kmeans' %}"><li>K-means Algorithm</li></a>
+        <a href="{% url 'LinReg' %}"><li>Linear Regression</li></a>
+      </ul>
+      
     </div>
-</div>
+  </div>
+  
+  </div>
 
-<div class="container-fluid">
-    <div class="container">
-        <div class="row d-flex justify-content-center">
-            <div class="col-6">
-                <div class="aboutme">
-                    <h3>About Me</h3>
-                    <p>
-                        I am a former CNC machinist that is currently enrolled
-                        at Kent State University for a Bachelors degree in
-                        Computer Science. I love eveything technology related.
-                        I've had a passion for building and tinkering with PCs
-                        for about 6 years. I also love CNC machines like lathes,
-                        mills, and 3d printers and being able to create things.
-                        My main hobbies since covid sent everyone home has been
-                        the outdoors and reading.
-                    </p>
+<div class="container-fluid ">
+  <div class="container ">
+    <div class="row d-flex justify-content-center">
+      <div class="col-6" >
+        <div class=" aboutme">
+          <h3>About Me</h3>
+          <p>
+            I am a former CNC machinist that is currently enrolled at Kent State University for a Bachelors degree in Computer Science. 
+            I love eveything technology related. I've had a passion for building and tinkering with PCs for about 6 years. 
+            I also love CNC machines like lathes, mills, and 3d printers and being able to create things. 
+            My main hobbies since covid sent everyone home has been the outdoors and reading. 
+          </p>
 
-                    <p>
-                        I have always had an interest in programming but within
-                        the last year it has turned into a passion. Modern web
-                        programming makes it very easy to start your projects.
-                        You can see your projects come to life in a short amount
-                        of time. Deploying your project on a live server and
-                        seeing your work on the internet is very satisfying and
-                        gave me a new found passion for programming.
-                    </p>
-                </div>
-            </div>
-            {% comment %}
-            <div class="col">
-                <div class="skills">
-                    <h2>skills</h2>
-                    <h5>python</h5>
-                    <p>
-                        I have built a couple of websites using the Django
-                        framework including this one and the reloading data
-                        tracker website
-                    </p>
-                </div>
-            </div>
-            {% endcomment %}
+          <p>
+              I have always had an interest in programming but within the last year it has turned into a passion. 
+              Modern web programming makes it very easy to start your projects. You can see your projects 
+              come to life in a short amount of time. Deploying your project on a live server and seeing your work on the 
+              internet is very satisfying and gave me a new found passion for programming.
+          </p>
         </div>
+      </div>
+      {% comment %} <div class="col">
+        <div class="skills">
+          <h2>skills</h2>
+          <h5>python</h5>
+          <p>
+            I have built a couple of websites using the Django framework including this one and the reloading data tracker website
+          </p>
+        </div>
+      </div> {% endcomment %}
     </div>
+
+  </div>
 </div>
 
 {%endblock content%}
